git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@482 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/user-am-detail.html
+++ b/jhj-web-user/user/user-am-detail.html
@@ -11,10 +11,6 @@
 						<li id="age">{{age}}</li>
 					</ul>
 				</div>
-				<!-- <a href="#" id="callStaff" class="button active zhuli-submit external"style="background:#EF7B01;border:1px solid #EF7B01;">
-					呼叫助理
-				</a>
-				 -->
 			</div>
 			<div class="zhuli-middle">
 				<div class="zhuli-middle-neirong">
@@ -82,9 +78,11 @@
 										        </div>
 								        	 	
 								        	  <div class="accordion-item-toggle" >
-													{{#each this}}									        			    
+													<!-- {{#each this}}									        			    
 								        				<a href="#" style="margin-left:25px;color:#FF4800">{{this}}</a>
-							        				{{/each}}	
+							        				{{/each}} -->	
+							        				
+							        				{{this}}
 								     		   </div>
 								         </div>
 								      </div>
