git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@486 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/user-am-detail.html
+++ b/jhj-web-user/user/user-am-detail.html
@@ -1,7 +1,7 @@
 
 	<div data-page="user-am-detail-page" class="page"style="background-color:#E5E5E5E!important;overflow:auto">
 		<!-- Scrollable page content-->
-		<div class="page-content">
+		<div class="page-content" style="padding-bottom:0;">
 			<div class="zhuli-top">
 				<div class="zhuli-top-jieshao">
 					<img src="{{head_img}}" id="staffImg">
@@ -72,11 +72,11 @@
 							     
 							     {{#each skill_map}}
 								     <div class="accordion-item-content">
-								        <!-- <div class="content-block">
+								         <div class="content-block">
 										       <div class="item-inner">
 										          <div class="item-title"><strong>{{@key}}</strong></div>
 										        </div> 
-								        	 	
+								        	<!-- 	
 								        	  <div class="accordion-item-toggle" >
 													{{#each this}}									        			    
 								        				<a href="#" style="margin-left:25px;color:#FF4800">{{this}}</a>
