git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@487 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/user-am-detail.html
+++ b/jhj-web-user/user/user-am-detail.html
@@ -74,7 +74,10 @@
 								     <div class="accordion-item-content">
 								         <div class="content-block">
 										       <div class="item-inner">
-										          <div class="item-title"><strong>{{@key}}</strong></div>
+										          <div class="item-title">
+										          	<strong>{{@key}}</strong>
+										          	 <a href="#" style="color:#FF4800">{{this}}</a>
+										          </div>
 										        </div> 
 								        	<!-- 	
 								        	  <div class="accordion-item-toggle" >
