--- a/jhj-web-user/user/user-am-detail.html
+++ b/jhj-web-user/user/user-am-detail.html
@@ -75,8 +75,10 @@
 								         <div class="content-block">
 										       <div class="item-inner">
 										          <div class="item-title">
-										          	<strong>{{@key}}</strong>
-										          	 <a href="#" style="color:#FF4800">{{this}}</a>
+										          	  <div class="item-title label"><strong>{{@key}}</strong></div>
+							                          <div class="item-xx-label" >
+							                          		{{this}}
+													  </div>
 										          </div>
 										        </div> 
 								        	<!-- 	
