git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@490 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/user-am-detail.html
+++ b/jhj-web-user/user/user-am-detail.html
@@ -77,9 +77,9 @@
 										          <div class="item-title"><strong>{{@key}}</strong></div>
 										        </div> 
 								        	 	
-												{{#each this}}									        			    
+												<!-- {{#each this}}									        			    
 							        				<a href="#" style="margin-left:25px;color:#FF4800">{{this}}</a>
-						        				{{/each}}	
+						        				{{/each}} -->	
 								         </div> 
 								      </div>
 							      {{/each}}
