git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@492 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/user-am-detail.html
+++ b/jhj-web-user/user/user-am-detail.html
@@ -88,12 +88,12 @@
 		                    <li>
 		                      <div class="item-content">
 			                        <div class="item-inner">
-			                          <div class="item-title label">员工标签:</div>
+			                          <div class="item-title label">员工技能:</div>
 			                          <div class="item-xx-label" >
 				                          	{{#each skill_map}}
-				                          		<strong>{{@key}}</strong>
+				                          		<strong>{{@key}}</strong><br>
 				                          		
-				                          		{{this}}
+				                          		<a href="#" style="color:#FF4800">{{this}}</a><br>
 				                          	{{/each}}
 									  </div>
 			                        </div>
