git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@494 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -11,6 +11,16 @@
 <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
 <link rel="stylesheet" href="css/my-app.css">
 
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "//hm.baidu.com/hm.js?a1deaad494a95d532bfed8013cce1c4a";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+</script>
+
 </head>
 <body>
 	<div class="statusbar-overlay"></div>
