git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@498 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -1,12 +1,12 @@
 
-	<div data-page="order-am-faqiyuyue-page" class="page" style="background:#E5E5E5;overflow:auto;">
-		<div class="page-content"style="margin:0;padding-bottom:40px;" >
+	<div data-page="order-am-faqiyuyue-page" class="page" style="background:#FDEEEE;overflow:auto;">
+		<div class="page-content"style="margin:0;padding-bottom:150px;background:#FDEEEE;" >
 			<form id="order-am-faqiyuyue-form" class="list-block">
 				
 				<input type="hidden" name="serviceType" id="serviceType" value="">
 				
 				<input type="hidden" id="parentServiceTypeId" value = "">
-				<ul>
+				<ul style="background:#fffce8;">
 					 <li class="accordion-item">
 					 	<a href="#" class="item-content item-link">
 				        	<div class="item-inner">
@@ -37,14 +37,14 @@
 			
 			
 			<div class="list-block"  id="myContent" style="border:0;">
-				<div class="content-block xd-fwyq">
+				<div class="content-block xd-fwyq" style="background:#FDEEEE;">
 					<div class="row">
 					 服务要求
 					</div>
 				</div>
 				<ul> 
 					<li class="align-top">
-				      <div class="item-content" style="padding:0;background:#E5E5E5;">
+				      <div class="item-content" style="padding:0;background:#FDEEEE;">
 				            <textarea rows="5" id="serviceContentText" name="service_content" placeholder="可以在这里用文字描述您的服务要求:" style="height:160px;"></textarea>
 				      </div>
 				    </li>
