--- a/jhj-web-user/user/aboutus.html
+++ b/jhj-web-user/user/aboutus.html
@@ -6,13 +6,41 @@
 	<div class="page-content">
       <div class="card-header" style="font-size:22px;font-weight:blod;">关于我们</div>
       <div class="card-content">
-        <div class="card-content-inner"><p style="margin:0;">叮当到家是以综合性家庭生活服务为基础的社区O2O平台，通过家庭生活助理服务满足客户个性化的家庭生活需求，实现轻松自在的家庭生活方式。
-叮当到家致力于解决客户的一切家庭琐事，并创新的将非标准化的服务融入线上平台，打造出真正的家庭服务O2O闭环。</p>
-<p style="margin:0;color:#EF7C00;font-weight:blod;">叮当到家微信公众平台为您提供4大贴心服务：</p>
-<p style="margin:0;">1，&nbsp;&nbsp;基础家政服务：高品质的基础家政服务。</p>
-<p style="margin:0;">2，&nbsp;&nbsp;家庭生活助理服务：家庭个性化需求的完美解决方案。</p>
-<p style="margin:0;">3，&nbsp;&nbsp;代管商户服务：代表客户购买商户服务，为客户把关并管理商户服务。</p>
-<p style="margin:0;">4，&nbsp;&nbsp;社区活动：家庭业余生活的兴趣活动平台。</p></div>
+        <div class="card-content-inner">
+          <p style="color:#EF7C00;margin:0;font-weight:blod;">1.公司介绍</p>
+          <p style="margin:0;">叮当到家是以“家庭服务定制化”为核心，以家政服务为入口，满足家庭服务个性化需求的O2O创新型企业。</p>
+          <p style="margin:0;">公司在业内首个实施，以通过“移动平台+主云门店系统+家庭助理团队”三位一体的三角业务模式，为中高端家庭提供“金牌保洁、厨娘烧饭、深度养护、贴心家事”服务，为中小型企业提供“企业保洁、企业团餐”服务，并在此基础上提供深层定制化服务。</p>
+          <p style="margin:0;">与现有家政相比，整体上具有明显差异化优势：</p>
+          <p style="margin:0;">变被动式服务为主动式服务</p>
+          <p style="margin:0;">变单一式服务为团队式服务</p>
+          <p style="margin:0;border-bottom:1px solid #999;">变普通式服务为高逼格服务</p>
+
+
+
+
+          <p style="color:#EF7C00;margin:0;font-weight:blod;">2.我们的优势</p>
+          <p style="margin:0;">主动</p>
+          <p style="margin:0;">不用您一次次的预约，</p>
+          <p style="margin:0;">我们提供月/年的家庭服务套餐。</p>
+          <p style="margin:0;">团队</p>
+          <p style="margin:0;">不用您一个个的更换，</p>
+          <p style="margin:0;">我们提供全能的家庭助理团队。</p>
+          <p style="margin:0;">匠心</p>
+          <p style="margin:0;">不用您一项项的检查，</p>
+          <p style="margin:0;">我们始终追求极致的工匠精神。</p>
+          <p style="margin:0;">安全</p>
+          <p style="margin:0;">不用您一回回的担忧，</p>
+          <p style="margin:0;border-bottom:1px solid #999;">我们提供服务/财产/安全三大保障。</p>
+
+
+          <p style="color:#EF7C00;margin:0;font-weight:blod;">3.我们的服务</p>
+          <p style="margin:0;">金牌保洁：专业保洁·专属服务</p>
+          <p style="margin:0;">厨娘烧饭：家常菜·家乡味</p>
+          <p style="margin:0;">深度养护：高水平·高标准</p>
+          <p style="margin:0;">贴心家事：托管·跑腿·代办·陪伴</p>
+          <p style="margin:0;border-bottom:1px solid #999;">企业服务：企业保洁·团餐</p>
+
+
       </div>
       <div class="card-footer"></div>
     </div>
@@ -20,4 +48,8 @@
 </div>
 
 
+
+
+
+ 
 
