--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -1,6 +1,6 @@
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="order-form-zhongdiangong-page" class="page" style="overflow:auto;background:#E5E5E5;">
+	<div data-page="order-form-zhongdiangong-page" class="page" style="overflow:auto;background:#FDEEEE;">
 		<!-- Scrollable page content-->
 		<div class="page-content" >
 		
@@ -16,7 +16,7 @@
 			<input type="hidden" id="addrId" name="addrId" value="">
 
 				<div style="margin: 0" class="list-block">
-					<ul style="margin-top:15px;background:#F8F8F8;">
+					<ul style="margin-top:15px;background:#fffce8;">
 						<li>
 							<div class="item-content">
 								<div class="item-inner" style="padding-top:0;padding-bottom:0;">
@@ -70,7 +70,7 @@
 			
 			
 			 <div  id="hhAddons" class="content-block"style="padding:0;margin:0;">
-				<div class="row"style="background:#F8F8F8;margin-left:0;">
+				<div class="row"style="background:#fffce8;margin-left:0;">
 					
 				 	<div style="width:33.333%;text-align:center;" >
 							<input type="hidden" value="" id="zuofanId">
