--- a/jhj-web-user/user/faq.html
+++ b/jhj-web-user/user/faq.html
@@ -7,37 +7,37 @@
       <div class="card-header" style="font-size:22px;font-weight:blod;">常见问题</div>
       <div class="card-content">
         <div class="card-content-inner" style="padding:0 15px;">
-		<p style="color:#EF7C00;margin:0;font-weight:blod;">叮当到家平台上的服务人员可靠吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">叮当到家平台上的服务人员都经过非常严格的实名认证、背景调查、资料备案。面试环节层层筛选，10%择优录取。叮当到家平台拥有强大的培训队伍，确保服务人员的服务技能、服务态度、服务礼仪的高标准。因此，非常可靠。</p>
+		<p style="color:#EF7C00;margin:0;font-weight:blod;">1、怎样成为个性化定制用户？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">您可以通过点击叮当到家官网、APP、微信公众号等途径，通过定制全年服务，成为叮当到家个性化定制用户；也可以拨打客服热线010-56429112，我们会上门为您办理。</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">家庭生活助理的服务时间？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">家庭生活助理执行弹性工作时间，原则上是每天8小时工作制，每周休息一天，如果客户对工作时间有特殊要求，可以与家庭助理灵活协商。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">2、叮当到家的服务人员如何呢？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">叮当到家平台上的服务人员都经过非常严格的实名认证、背景调查、资料备案。面试环节层层筛选，5%择优录取，专业培训后上岗。叮当到家平台拥有强大的培训队伍，确保服务人员的服务技能、服务态度、服务礼仪的高标准。</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">家庭生活助理的服务时长有没有限制？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">家庭生活助理提供的服务是非标准化服务，工作时长可以按照客户需求定制，但是不能违背国家的相关法律规定。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">3、叮当到家的服务需要用户提供工具吗？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">您好，我们的服务人员会携带对应服务所需工具，实现高品质服务。</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">如何拥有专属家庭生活助理？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">在微信公众平台注册并添加服务地址后，系统会根据您的特点和地理位置，为您选择适合的家庭生活助理。您家庭的各种生活需求可以通过一键呼叫助理来实现。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">4、厨房/卫生间保养包含家电清洗吗？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">您好，厨房/卫生间保养是针对厨房/卫生间内固定设施（储物柜、家用电器）表面深度清洁和保养服务，不包含家电清洗。推荐您搭配使用叮当到家家电清洗服务，效果显著。</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">使用家庭生活助理服务如何计费？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">家庭生活助理服务采用按小时计费方式，最小计时单位为半小时。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">5、我家面积比较大，如果超出服务时间，怎么收费呢？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">叮当到家的日常保洁是按次收费，每次3小时。如果时间超出，按50元/小时收取（不足1小时按1小时收取）。</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">家庭生活助理采用怎样的方式服务？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">叮当到家每位家庭生活助理都有不同的服务技能，大家组合在一起形成一个服务团队。针对家庭不同需求由助理团队相应人员提供服务。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">6、叮当到家的阿姨培训吗？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">叮当到家的阿姨入职前会有一系列的培训，并通过考核才能上岗，日常还有质检对阿姨进行监督，以保证阿姨的服务质量。</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">叮当到家充值卡是否可以使用助理服务？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">叮当到家充值卡是通用型充值卡，可以使用叮当到家平台上提供的全品类服务项目。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">7、叮当到家的阿姨能代买清洁剂吗？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">能代买，需要您下单时在备注里写明。</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">家庭生活助理团队的人员构成？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">叮当到家的家庭生活助理团队，是由平台经过严格的挑选和培训出来的，是一群年轻有朝气、有知识、有服务技能的专业服务人员组成的。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">8、叮当到家的阿姨能清洗油烟机吗？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">阿姨可以擦油烟机表面，但内部清洗需要专业技能和专业工具，叮当到家也提供专业的油烟机清洗服务，需要您电话预约。预约热线010-56429112</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">服务人员会自带保洁工具吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">服务人员一般会携带抹布等小件工具，如有特殊需要，请在叮当到家平台预约时填写特殊说明或与我们的客服说明。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">9、叮当到家有什么优惠活动吗？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">有，您可以关注叮当到家的官方微信和APP，优惠活动会时常推送哦！</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">在打扫期间我一定要在家吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">是的，如果您在打扫期间需要外出的话，请拨打我们的客服电话，联系我们。</p>
+    <p style="color:#EF7C00;margin:0;font-weight:blod;">10、服务后，发现家里的现金丢失，平台要如何处理？</p>
+      <p style="border-bottom:1px solid #999;margin:0;">在阿姨离开前，您要检查家里的贵重物品/现金是否完好。阿姨离开后，如发现家中现金丢失，可第一时间报警，平台将积极协助您处理此事。</p>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">服务人员在服务时意外受伤了怎么办？</p>
+   <!--  <p style="color:#EF7C00;margin:0;font-weight:blod;">服务人员在服务时意外受伤了怎么办？</p>
       <p style="border-bottom:1px solid #999;margin:0;">我们为叮当到家平台服务人员购买了人身意外伤害保险，如果服务人员在服务的过程中意外受伤（如摔倒、划伤等），必须及时通知保险公司（或通知叮当到家），并立即报案，叮当到家平台会协调保险公司做好理赔工作。如果未及时通知致使保险事故的性质、原因、损失程序等难以确定的，保险公司对难以确定的部分，不承担赔偿责任。</p>
 
     <p style="color:#EF7C00;margin:0;font-weight:blod;">服务人员在服务时意外损坏了客户物品怎么办？</p>
@@ -58,7 +58,7 @@
       <p style="margin:0;">6、代管商户服务：开锁、基础维修、挂号、深度保洁、月嫂育儿嫂、按摩、汽车租赁、婚庆、摄影、度假村、私人教练。</p>
       <p style="margin:0;">7、生活技能普及：智能手机使用、实用讲座。</p>
       <p style="margin:0;">8、生活方案设计+服务：出行策划、筹备宴请。</p>
-      <p style="margin:0;">9、生活信息查询。</p>
+      <p style="margin:0;">9、生活信息查询。</p> -->
         </div>
       </div>
       <div class="card-footer"></div>
