git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@500 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -11,6 +11,16 @@
 <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
 <link rel="stylesheet" href="css/my-app.css">
 
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "//hm.baidu.com/hm.js?a1deaad494a95d532bfed8013cce1c4a";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	
+</script>
    
 </head>
 <body>
@@ -51,7 +61,7 @@
 							<p>深度养护</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 27)" class="mincircle">
+						<a href="#" onclick="orderLink('order/fiveservice/qiyefuwu.html', 27)" class="mincircle">
 							<img src="img/newindex/bmfw-index.png" alt="">
 							<p>企业服务</p>
 							<div class="xiabiaoxian"></div>
@@ -220,7 +230,7 @@
     <script type="text/javascript" src="js/order/fiveservice/cook.js"></script>
     <script type="text/javascript" src="js/order/fiveservice/tiexinjiashi.js"></script>
     <script type="text/javascript" src="js/order/fiveservice/quanniandingzhi.js"></script>
-    
+    <script type="text/javascript" src="js/order/fiveservice/qiyefuwu.js"></script>
     <!-- 我的 余额  消费明细 -->
     <script type="text/javascript" src="js/user/mine-rest-money-detail.js"></script>
 </body>
