--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -11,6 +11,18 @@
 <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
 <link rel="stylesheet" href="css/my-app.min.css?t=52fdad8d">
 
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "//hm.baidu.com/hm.js?a1deaad494a95d532bfed8013cce1c4a";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	
+</script>
+
+
 </head>
 <body>
 	<div class="statusbar-overlay"></div>
@@ -50,7 +62,7 @@
 							<p>深度养护</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 27)" class="mincircle">
+						<a href="#" onclick="orderLink('order/fiveservice/qiyefuwu.html', 27)" class="mincircle">
 							<img src="img/newindex/bmfw-index.png" alt="">
 							<p>企业服务</p>
 							<div class="xiabiaoxian"></div>
