git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@501 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -22,10 +22,15 @@
 	
 </script>
    
+<style> 
+	<!-- 隐藏百度商桥广告图标  -->
+	#qiao-wrap{
+		display:none;
+	} 
+</style>   
+   
 </head>
 <body>
-	<div class="statusbar-overlay"></div>
-	<div class="panel-overlay"></div>
 
 	<div class="views">
 
