--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -22,12 +22,6 @@
 	
 </script>
    
-<style> 
-	<!-- 隐藏百度商桥广告图标  -->
-	#qiao-wrap{
-		display:none;
-	} 
-</style>   
    
 </head>
 <body>
@@ -115,7 +109,12 @@
 			</div>
 
 		</div>
-
+	<script type="text/javascript">
+		//页面渲染完毕，隐藏百度商桥(垃圾广告)
+		window.onload = function (){
+			document.getElementById("qiao-wrap").style.display = "none";
+		}
+	</script>
 	
 	<script type="text/javascript" src="js/framework7.min.js"></script>
 	
