--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -108,7 +108,13 @@
 			</div>
 
 		</div>
-
+	
+	<script type="text/javascript">
+		//页面渲染完毕，隐藏百度商桥(垃圾广告)
+		window.onload = function (){
+			document.getElementById("qiao-wrap").style.display = "none";
+		}
+	</script>
 
 	<script type="text/javascript" src="js/framework7.min.js"></script>
 	<script type="text/javascript" src="js/u-lib.min.js"></script>
