git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@519 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-cal.html
+++ b/jhj-web-user/order/order-cal.html
@@ -23,9 +23,10 @@
 				</ul>
 			</div>
 			<div id="more">
+				<input hidden id="page" value="1">
 				<a href="#" id="order-list-more" class="button active hjyh-submit">点击加载更多</a>
 			</div>
-
+			
 			<!-- 每块 card的展示内容  模板 -->
 			<div id="order-hour-list" style="display: none">
 				<!--  card即为连接，跳转到订单详情-->
