git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@523 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/huodong-detail.html
+++ b/jhj-web-user/huodong-detail.html
@@ -1,4 +1,4 @@
-<div class="pages" style="background:#EFEFF4;">
+<div class="pages" style="background:#FDEEEE;">
   <div data-page="huodong-detail" class="page" style="overflow:auto;">
      
       <div class="page-content">
