--- a/jhj-web-user/order/order-cal.html
+++ b/jhj-web-user/order/order-cal.html
@@ -1,5 +1,5 @@
 <div class="pages">
-	<div data-page="order-cal-page" class="page" style="overflow: auto; background: #E5E5E5;">
+	<div data-page="order-cal-page" class="page" style="overflow: auto; background: #FDEEEE;">
 		<div class="page-content" id="nowScroll"
 			style="min-height: 792px; height: auto !important; padding-bottom: 60px !important;"
 		>
@@ -18,7 +18,7 @@
 
 
 			<div class="list-block" id="card-hour-now-list">
-				<ul style="background: #E5E5E5;">
+				<ul  style="background:#fffce8;">
 
 				</ul>
 			</div>
@@ -31,7 +31,7 @@
 			<div id="order-hour-list" style="display: none">
 				<!--  card即为连接，跳转到订单详情-->
 				<a class="order-info-link" href="#" onclick="hrefToUorderView({order_type}, '{order_no}')">
-					<li class="list-card">
+					<li class="list-card" style="background:#fffce8;">
 						<div class="list-card1">
 
 							{order_hour_type_name}
