--- a/jhj-web-user/survey/survey-user.html
+++ b/jhj-web-user/survey/survey-user.html
@@ -1,8 +1,8 @@
 
-	<div data-page="survey-user-page" class="page"style="background-color:#E5E5E5!important;overflow:auto">
+	<div data-page="survey-user-page" class="page"style="background-color:#FDEEEE!important;overflow:auto">
 	
 		<div style="margin:0" class="list-block">
-				<ul style="margin-top:15px;background:#F8F8F8;">
+				<ul style="margin-top:15px;background:#fffce8;">
 					<li>
 						<div class="item-content">
 							<div class="item-inner" style="padding-top:0;padding-bottom:0;">
@@ -17,7 +17,7 @@
 	<form id="survey-user-form"  >
 		<div class="page-content"style="margin:0;">
 			<div style="margin: 0" class="list-block">
-					<ul style="margin-top:15px;background:#F8F8F8;">
+					<ul style="margin-top:15px;background:#fffce8;">
 						
 						 <li>
 							<div class="item-content">
