--- a/jhj-web-user/user/aboutus.html
+++ b/jhj-web-user/user/aboutus.html
@@ -2,7 +2,7 @@
 
 	<!-- Page, data-page contains page name-->
 	<!-- <div class="card"> -->
-	<div data-page="aboutus" class="page" style="background:#E5E5E5;overflow:auto;">
+	<div data-page="aboutus" class="page" style="background:#FDEEEE;overflow:auto;">
 	<div class="page-content">
       <div class="card-header" style="font-size:22px;font-weight:blod;">关于我们</div>
       <div class="card-content">
