--- a/jhj-web-user/user/charge/mine-charge-list.html
+++ b/jhj-web-user/user/charge/mine-charge-list.html
@@ -2,11 +2,11 @@
 <!-- Top Navbar-->
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="mine-charge-list" class="page"style="overflow:auto;background:#E5E5E5;">
+	<div data-page="mine-charge-list" class="page"style="overflow:auto;background:#FDEEEE;">
 		<div class="page-content"style="margin-top:5px;height:992px;">
 		<!-- 1f -->
 			<div class="list-block chongzhi-qingchu"style="margin:25px auto;color:#999;">
-                <ul style="background:#F8F8F8;">
+                <ul style="background:#fffce8;">
                 {{#each data}}
                   <li class="item-content" style="border:0">
                     <div class="item-inner">
