--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -1,10 +1,10 @@
 
 <div class="pages">
-	<div data-page="mine-charge-way" class="page navbar-fixed" style="background-color: #E5E5E5E !important;">
+	<div data-page="mine-charge-way" class="page navbar-fixed" style="background-color: #FDEEEE!important;">
 		<div class="page-content" style="margin: 0; color: #999;">
 			<span class="fangshiwenzi">信息核对</span>
 			<form id="order-view" class="list-block" style="margin: 0 auto!important;">
-				<ul style="background: #F8F8F8">
+				<ul style="background: #fffce8">
 					<li>
 						<div class="item-content">
 							<div class="item-inner">
@@ -30,7 +30,7 @@
 			</form>
 			<span class="fangshiwenzi">支付方式</span>
               <div id="order-view" class="list-block chongzhi-qingchu"style="margin:0 auto!important;">
-                <ul style="background:#F8F8F8">
+                <ul style="background:#fffce8">
                     <!-- <li>
                       <div class="item-content">
                         <div class="item-inner">
@@ -45,10 +45,10 @@
                       </div>
                     </li> -->
                     <li>
-						<label class="label-checkbox item-content"style="background:#F8F8F8;">
-							<div class="item-media"><img src="img/icons/weixin.png"style="width:50px;"></div>
+						<label class="label-checkbox item-content"style="background:#fffce8;">
+							<div class="item-media"><img src="img/icons/weixin.png"style="width:45px;"></div>
 							<div class="item-inner">
-								<div class="item-title"style="margin-left:-26px;color:#000;">微信支付</div>
+								<div class="item-title"style="margin-left:-15px;color:#000;">微信支付</div>
 								<input type="hidden"  value="2"/>
 								<img  src="img/icons/duigou-green.png" id="order_pay_type" name="order_pay_type"/> 
 							</div>
