--- a/jhj-web-user/user/coupon/mine-coupon-list.html
+++ b/jhj-web-user/user/coupon/mine-coupon-list.html
@@ -3,13 +3,13 @@
 
 <div class="pages"style="background:0">
 	<!-- Page, data-page contains page name-->
-	<div data-page="mine-coupon-list-page" class="page"style="background-color:#E5E5E5E!important;overflow:auto">
+	<div data-page="mine-coupon-list-page" class="page"style="background-color:#FDEEEE!important;overflow:auto">
 		<!-- Scrollable page content-->
 		<div class="page-content" >
-			<div class="content-block"style="background:#F8F8F8;width:100%!important;height:60px;padding:0;margin:0;">
+			<div class="content-block"style="background:#fffce8;width:100%!important;height:60px;padding:0;margin:0;">
 		      <div class="row">
 		        <div class="col-66">
-		        	<input type="text" id="cardPasswdItem" placeholder="请输入兑换码"class="yhq-duihuanma">
+		        	<input type="text" id="cardPasswdItem" placeholder="请输入兑换码"class="yhq-duihuanma" style="background:#fffce8;">
 		        </div>
 		        <div class="col-33 yhq-duihuanma-btn" id="user-coupon-exchange-button">兑换</div>
 		      </div>
