--- a/jhj-web-user/user/mine-addr-list.html
+++ b/jhj-web-user/user/mine-addr-list.html
@@ -1,10 +1,10 @@
 <div class="pages">
 	<!-- Page, data-page contains page name-->
 	<div data-page="mine-addr-list" id="mine-addr-list" class="page" style="overflow:auto;">
-		<div class="page-content" style="margin:0;height:792px!important;">
+		<div class="page-content" style="margin:0;height:792px!important;background:#FDEEEE;">
 
 			<div class="list-block address-list-block">
-				<ul id="address_list" class="am-list am-list-static am-list-border">
+				<ul id="address_list" class="am-list am-list-static am-list-border" style="background:#fffce8;">
 					{{#each data}}
 					<a href="#" class="item-link" id="selectAddrLink" onclick="clickToSetDefault(this,{{id}})" >
  					<li class="swipeout">
