--- a/jhj-web-user/user/mine-rest-money-detail.html
+++ b/jhj-web-user/user/mine-rest-money-detail.html
@@ -1,4 +1,4 @@
-<div data-page="mine-rest-money-detail-page" class="page" style="overflow:auto;background:#E5E5E5;">
+<div data-page="mine-rest-money-detail-page" class="page" style="overflow:auto;background:#FDEEEE;">
 	<div class="page-content" id="nowScroll" style="min-height:792px;height:auto!important;padding-bottom:60px!important;">
 			
 				<div class="list-block virtual-list" >
