--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -3,11 +3,11 @@
 <div class="pages">
 	<!-- Page, data-page contains page name-->
 	<div data-page="mine" class="page">
-		<div class="page-content" >
+		<div class="page-content" style="background:#FDEEEE;">
 			<form id="my-form" class="list-block chongzhi-qingchu"style="color:#999;padding-bottom:10px;">
 				<div class="list-block">
 					<div class="list-group">
-						<ul>
+						<ul style="background:#fffce8;">
 							<li>
 								<a href="#" id="mine-info" class="item-link smart-select"  >
 									<div class="item-content">
@@ -25,11 +25,11 @@
 									</div>
 								</a>
 							</li>
-							<li class="my-jiben">
+							<li class="my-jiben" style="background:#fffce8;">
 								<div>会员级别</div>
 								<div style="color:#EF7C00;">普通会员</div>
 							</li>
-							<li class="my-jiben" id="restMoneyDiv">
+							<li class="my-jiben" id="restMoneyDiv" style="background:#fffce8;">
 								<div>余额</div>
 								<div style="color:#EF7C00;" id="mine-rest-money">{{rest_money}}</div>
 							</li>
@@ -41,7 +41,7 @@
 			<form  class="list-block chongzhi-qingchu"style="color:#999;">
 				<div  class="list-block">
 					<div class="list-group" style="margin-top:50px">
-						<ul>
+						<ul style="background:#fffce8;">
 							<li>
 								<a href="#" id="mine-order-lists" class="item-link" >
 									<div class="item-content">
