--- a/jhj-web-user/user/more.html
+++ b/jhj-web-user/user/more.html
@@ -2,12 +2,12 @@
 <!-- We don't need full layout here, because this page will be parsed with Ajax-->
 <!-- Top Navbar-->
 
-<div class="pages" style="background:#E5E5E5;">
-<div data-page="mine-more" class="page" style="overflow:auto;">
+<div class="pages">
+<div data-page="mine-more" class="page" style="overflow:auto;background:#FDEEEE;">
 	<!-- Page, data-page contains page name-->
 	<div class="page-content">
    <div class="list-block">
-      <ul>
+      <ul style="background:#fffce8;">
         <li>
           <a href="#" id="mine-faq" class="item-link item-content">
             <div class="item-media"></div>
