--- a/jhj-web-user/user/serviceCharge/order-serice-charge-success.html
+++ b/jhj-web-user/user/serviceCharge/order-serice-charge-success.html
@@ -1,5 +1,5 @@
 
-	<div data-page="order-service-charge-success-page" class="page"style="background:#F8F8F8;">
+	<div data-page="order-service-charge-success-page" class="page"style="background:#FDEEEE;">
 		<!-- Scrollable page content-->
 		<div class="page-content">
 
