--- a/jhj-web-user/user/serviceCharge/order-service-charge.html
+++ b/jhj-web-user/user/serviceCharge/order-service-charge.html
@@ -1,4 +1,4 @@
-	<div data-page="order-service-charge-page" class="page"style="background-color:#E5E5E5E!important;overflow:auto">
+	<div data-page="order-service-charge-page" class="page"style="background-color:#FDEEEE!important;overflow:auto">
 		<!-- Scrollable page content-->
 		<div class="page-content"style="margin:0;">
 			<form id="order-service-charge-form" style="color:#666;">
