--- a/jhj-web-user/user/user-am-detail.html
+++ b/jhj-web-user/user/user-am-detail.html
@@ -1,7 +1,7 @@
 
-	<div data-page="user-am-detail-page" class="page"style="background-color:#E5E5E5E!important;overflow:auto">
+	<div data-page="user-am-detail-page" class="page"style="background-color:#FDEEEE!important;overflow:auto">
 		<div class="page-content" >
-			<div class="zhuli-top">
+			<div class="zhuli-top" style="background:#fffce8;">
 				<div class="zhuli-top-jieshao">
 					<img src="{{head_img}}" id="staffImg">
 					<ul class="zhuli-top-wenzi">
@@ -14,7 +14,7 @@
 			<div class="zhuli-middle">
 				<div class="zhuli-middle-neirong">
 					<form id="order-view" class="list-block"style="margin:0 auto;">
-		                <ul style="background:#F8F8F8">
+		                <ul style="background:#fffce8">
 	                    <li>
 	                      <div class="item-content">
 	                        <div class="item-inner">
