--- a/jhj-web-user/huodong-list.html
+++ b/jhj-web-user/huodong-list.html
@@ -1,4 +1,4 @@
-<div class="pages" style="background:#E5E5E5;">
+<div class="pages" style="background:#FDEEEE;">
 	<div data-page="huodong-list-page" class="page" style="overflow:auto;">
 	     
 	       {{#each data}}
