--- a/jhj-web-user/login.html
+++ b/jhj-web-user/login.html
@@ -1,19 +1,19 @@
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="login" class="page">
+	<div data-page="login" class="page" style="background:#FDEEEE!important;">
 		<!-- Scrollable page content-->
 		<div class="page-content">
 
 		<form>
-			<div class="neirong1" style="border-bottom:2px solid #F1F1F1">
-				<input type="tel" id="user_mobile" name="mobile" placeholder="输入手机号" class="jieshao1">
+			<div class="neirong1" style="border-bottom:2px solid #F1F1F1;background:#fffce8;">
+				<input type="tel" id="user_mobile" name="mobile" placeholder="输入手机号" class="jieshao1"  style="background:#fffce8;">
 				<!-- <div class="jieshao1">请输入手机号</div> -->
 				<div id="get_code" class="yanzheng">获取验证码</div>
 				<!-- <div id="get_code_yuyin" class="yanzheng">获取语音验证码</div> -->
 			</div>
 			
-			<div class="neirong1">
-				<input type="tel" id="verify_code" name="verify_code" placeholder="输入验证码" class="jieshao1">
+			<div class="neirong1" style="background:#fffce8;">
+				<input type="tel" id="verify_code" name="verify_code" placeholder="输入验证码" class="jieshao1" style="background:#fffce8;">
 				<!-- <div class="jieshao1">请输入验证码</div> -->
 				<div class="yanzheng1">没有收到？</div>
 			</div>
