--- a/jhj-web-user/order/order-pay-success.html
+++ b/jhj-web-user/order/order-pay-success.html
@@ -1,7 +1,7 @@
 
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="order-pay-success-page" class="page"style="background:#F8F8F8;">
+	<div data-page="order-pay-success-page" class="page"style="background:#FDEEEE;">
 		<!-- Scrollable page content-->
 		<div class="page-content">
 
