--- a/jhj-web-user/user/faq.html
+++ b/jhj-web-user/user/faq.html
@@ -1,7 +1,7 @@
 <div class="pages">
 	
 	<!-- Page, data-page contains page name-->
-	<div data-page="fag" class="page" style="background:#E5E5E5;overflow:auto;">
+	<div data-page="fag" class="page" style="background:#FDEEEE;overflow:auto;">
   <div class="page-content">
 	<!-- <div data-page="fag"  class="card"> -->
       <div class="card-header" style="font-size:22px;font-weight:blod;">常见问题</div>
