--- a/jhj-web-user/user/mine-add-addr.html
+++ b/jhj-web-user/user/mine-add-addr.html
@@ -4,7 +4,7 @@
 
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="mine-add-addrs" class="page">
+	<div data-page="mine-add-addrs" class="page" style="background:#FDEEEE;">
 
 		<!-- Search bar overlay -->
 		<div class="searchbar-overlay"></div>
@@ -23,7 +23,7 @@
 					<li>
 						<div class="searchbar-input-jhj" style="border-bottom:1px solid #B5B5B5;">
 							<!-- oninput -> execute our getcity() function to search and fill list-items -->
-							<input id="name" name="name" oninput="getBaiduAutoComplete()" placeholder="第一步	   请输入小区名" type="search-jhj">
+							<input id="name" name="name" oninput="getBaiduAutoComplete()" placeholder="第一步	   请输入小区名" type="search-jhj" style="background:#fffce8;">
 
 						</div>
 
@@ -36,7 +36,7 @@
 						<div class="searchbar-input-jhj">
 						
 							<!-- oninput -> execute our getcity() function to search and fill list-items -->
-							<input id="addr" name="addr" placeholder="第二步 	  详细门牌号，如3号楼1单元202" type="search-jhj">
+							<input id="addr" name="addr" placeholder="第二步 	  详细门牌号，如3号楼1单元202" type="search-jhj" style="background:#fffce8;">
 							
 						</div>
 					</li>
