--- a/jhj-web-user/user/user-wancheng.html
+++ b/jhj-web-user/user/user-wancheng.html
@@ -2,12 +2,12 @@
 <!-- Top Navbar-->
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="user-wancheng" class="page">
+	<div data-page="user-wancheng" class="page" style="background:#FDEEEE;">
 		<div class="page-content">
 			<form id="user_wancheng" class="list-block chongzhi-qingchu"style="color:#666;">
 				<div class="list-block" style="margin:0;">
 					<div class="list-group">
-						<ul>
+						<ul style="background:#fffce8;">
 							<li>
 								<div class="item-content">
 									<div class="item-inner" style="padding-top:0;padding-bottom:0;">
