--- a/jhj-web-user/user/user-zhulidingdan.html
+++ b/jhj-web-user/user/user-zhulidingdan.html
@@ -1,6 +1,6 @@
 <div class="pages"style="background:0">
 	<!-- Page, data-page contains page name-->
-	<div data-page="order-view-page" class="page"style="background-color:#E5E5E5E!important;overflow:auto;">
+	<div data-page="order-view-page" class="page"style="background-color:#FDEEEE!important;overflow:auto;">
 		<!-- Scrollable page content-->
 		<div class="page-content" >
 			<div class="ddxq-neirong">
