git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@524 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-cal.html
+++ b/jhj-web-user/order/order-cal.html
@@ -3,7 +3,12 @@
 		<div class="page-content" id="nowScroll"
 			style="min-height: 792px; height: auto !important; padding-bottom: 60px !important;"
 		>
-
+			<div class="content-block">
+				<div style="padding: 0; margin-right: -15px; width: auto" class="content-block-inner">
+					本月总订单数:<label id="total">0</label><br>
+					本月未完成订单数:<label id="total_uf">0</label>
+				</div>
+			</div>
 			<div class="content-block">
 				<div style="padding: 0; margin-right: -15px; width: auto" class="content-block-inner">
 					<div id="calendar-inline-container"></div>
