git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@526 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/survey/survey-result.html
+++ b/jhj-web-user/survey/survey-result.html
@@ -18,7 +18,7 @@
 					          <li class="item-content" style="border:0;">
 					            <div class="item-inner" style="padding:0!important;background:#fffce8;">
 					               <div class="item-title" style="width:45%;">
-					               		<a href="#"  class="button button-fill color-gray">点击取消选中</a>
+					               		<a href="#"  class="button button-fill service-button2">点击取消选中</a>
 					               </div>
 					               <a href="#" id="contentPrice"  class="item-xx feed_back_money"  style="font-size:16px;width:18%;">单价</a>
 					            	<div class="content-block" style="padding:0;" >
@@ -30,7 +30,7 @@
 								  	</div>
 									<div class="content-block" style="padding:0;" id="contentDiv">
 										<p style="margin:0;" >
-											<a href="#"  id="changeThisTimes"  class="button button-fill color-gray">调整</a>
+											<a href="#"  id="changeThisTimes"  class="button button-fill service-button2">调整</a>
 										</p>
 									 </div>	
 					             </div>
@@ -94,7 +94,7 @@
           <li class="item-content" style="border:0;">
             <div class="item-inner" style="padding:0!important;">
                <div class="item-title" style="width:45%;">
-               		<a href="#" id="contentName"  onclick="changeColor(this)" class="button button-fill color-green">{contentName}</a>
+               		<a href="#" id="contentName"  onclick="changeColor(this)" class="{serviceColor}">{contentName}</a>
                </div>
                <a href="#" id="contentPrice"  class="item-xx feed_back_money"  style="font-size:16px;width:18%;">{price}元</a>
             	<div class="content-block" style="padding:0;width:18%" id="timesDiv" >
@@ -113,7 +113,7 @@
 						<!-- 该服务是否有 子服务 -->
 						<input type="hidden" id="contentChildType" value="{contentChildType}">
 						
-						<a href="#" onclick="changeThisTimes(this)" id="changeThisTimes"  class="button button-fill color-orange">调整</a>
+						<a href="#" onclick="changeThisTimes(this)" id="changeThisTimes"  class="{serviceChangeButtonColor}">调整</a>
 						
 					</p>
 				 </div>	
@@ -135,7 +135,7 @@
 	          <li class="item-content" style="border:0;">
 	            <div class="item-inner" style="padding:0!important;">
 	               <div class="item-title" style="width:45%;">
-	               		<a href="#" id="freeContentName"  class="button button-fill color-green">{contentName}</a>
+	               		<a href="#" id="freeContentName"  class="button button-fill service-button1">{contentName}</a>
 	               </div>
 	             </div>
 			  </li>
