git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@531 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/fiveservice/cook.html
+++ b/jhj-web-user/order/fiveservice/cook.html
@@ -1,7 +1,7 @@
 	<div data-page="cook-page" class="page" style="background:#FDEEEE;overflow:auto;">
 	
 		<div class="page-content" style="padding-bottom:0;">
-			<div class="fiveservice-img">
+			<div class="fiveservice-img" id="cook-banner">
 				<a href="order/service-introduce/service-chuniang.html"><img id="topImg" src="img/icon-fiveservice/chuniangshaofan-top.jpg" alt=""></a>
 			</div>
 			
