--- a/jhj-web-user/order/fiveservice/jinpaibaojie.html
+++ b/jhj-web-user/order/fiveservice/jinpaibaojie.html
@@ -2,7 +2,7 @@
 	
 		
 		<div class="page-content" style="padding-bottom:0;">
-			<div class="fiveservice-img">
+			<div class="fiveservice-img" id="jinpaibaojie-banner">
 				<a href="order/service-introduce/service-jinpai.html"><img id="topImg" src="img/icon-fiveservice/jinpaibaojie-top.jpg" alt=""></a>
 			</div>
 			
