--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -21,9 +21,9 @@
 
 			<div class="pages navbar-through toolbar-through">
 			
-				<div data-page="index"  class="page beijing-index"style="overflow:auto;">
+				<div data-page="index"  class="page"style="overflow:auto;">
 					
-					<div id="indexPageContentDiv" class="page-content" style="margin:0;padding-bottom:80px;">
+					<div id="indexPageContentDiv" class="page-content" style="margin:0;padding:0;">
 						<img src="img/newindex/index-top.png" alt="" style="width:100%;padding:0;">
 
 
