git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@533 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/service-introduce/three-baozhang.html
+++ b/jhj-web-user/order/service-introduce/three-baozhang.html
@@ -1,9 +1,9 @@
 
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="three-baozhang-page" class="page"style="overflow:auto;background:#FDEEEE;">
+	<div data-page="three-baozhang-page" class="page"style="background:#FDEEEE;">
 		<!-- Scrollable page content-->
-		<div class="page-content" style="margin:0;height:auto;">
+		<div class="page-content" style="margin:0;height:100%!important;">
 			<div class="se-jinpai">
 				
 				<div class="se-jinpai-title">
