--- a/jhj-web-user/order/fiveservice/qiyefuwu.html
+++ b/jhj-web-user/order/fiveservice/qiyefuwu.html
@@ -1,5 +1,5 @@
 <div data-page="qiyefuwu-page" class="page" style="background:#FDEEEE;">
-		<div class="page-content" style="padding-bottom:40px;height:100%;">
+		<div class="page-content" style="padding-bottom:40px;height:100%!important;">
 			
 			<input  type="hidden" id="parentServiceTypeId" value="">
 			
