--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -2,8 +2,8 @@
 <!-- Top Navbar-->
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="mine" class="page" style="overflow:auto;">
-		<div class="page-content" style="background:#FDEEEE;">
+	<div data-page="mine" class="page">
+		<div class="page-content" style="background:#FDEEEE;height:100%!important;">
 			<form id="my-form" class="list-block chongzhi-qingchu"style="color:#999;padding-bottom:10px;">
 				<div class="list-block">
 					<div class="list-group">
