git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@535 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -112,12 +112,12 @@
 			</div>
 
 		</div>
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 		//页面渲染完毕，隐藏百度商桥(垃圾广告)
 		window.onload = function (){
 			document.getElementById("qiao-wrap").style.display = "none";
 		}
-	</script>
+	</script> -->
 	
 	<script type="text/javascript" src="js/framework7.min.js"></script>
 	
@@ -137,6 +137,8 @@
 	<script type="text/javascript" src="js/index.js"></script>
 	<!-- 时间选择js-->
 	<script type="text/javascript" src="js/service-date-select.js"></script>
+	<script type="text/javascript" src="js/cook-date-select.js"></script>
+	
 	
 	<!-- 历史订单录入相关js -->	
 	<!-- <script type="text/javascript" src="js/history-service-date-select.js"></script> -->
