--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -10,7 +10,8 @@
 					 <li class="accordion-item">
 					 	<a href="#" class="item-content item-link">
 				        	<div class="item-inner">
-				         		 <div class="item-title" id="servceTypeName"></div>
+				         		 <!-- <div class="item-title" id="servceTypeName"></div> -->
+				         		 <div class="item-title" >服务价格</div>
 				        	</div>
 				        </a>
 				        <div class="accordion-item-content">
