--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -109,13 +109,13 @@
 
 		</div>
 	
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 		//页面渲染完毕，隐藏百度商桥(垃圾广告)
 		window.onload = function (){
 			document.getElementById("qiao-wrap").style.display = "none";
 		}
 	</script>
-
+ -->
 	<script type="text/javascript" src="js/framework7.min.js"></script>
 	<script type="text/javascript" src="js/u-lib.min.js"></script>
 	<script type="text/javascript" src="js/u-main.min.js?t=806dffa2"></script>
