git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@540 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-cal.html
+++ b/jhj-web-user/order/order-cal.html
@@ -44,7 +44,7 @@
 
 						</div>
 						<div class="list-card2">
-							<div class="list-card2-1">时间：{service_date}</div>
+							<div class="list-card2-1">{service_date}</div>
 							<div class="list-card2-2" style="background:#fffce8;">地址：{address}</div>
 						</div>
 				</li>
