git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@548 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -1,6 +1,6 @@
 
-	<div data-page="order-am-faqiyuyue-page" class="page" style="background:#FDEEEE;overflow:auto;">
-		<div class="page-content"  style="margin:0;padding-bottom:150px;background:#FDEEEE;height:100%!important;" >
+	<div data-page="order-am-faqiyuyue-page" class="page" style="background:#FDEEEE;">
+		<div class="page-content"  style="background:#FDEEEE;height:100%!important;" >
 			<form id="order-am-faqiyuyue-form" class="list-block">
 				
 				<input type="hidden" name="serviceType" id="serviceType" value="">
