--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -1,7 +1,7 @@
 
 	<div data-page="order-am-faqiyuyue-page" class="page" style="background:#FDEEEE;">
 		<div class="page-content"  style="background:#FDEEEE;height:100%!important;" >
-			<form id="order-am-faqiyuyue-form" class="list-block">
+			<form class="list-block">
 				
 				<input type="hidden" name="serviceType" id="serviceType" value="">
 				
@@ -10,13 +10,12 @@
 					 <li class="accordion-item">
 					 	<a href="#" class="item-content item-link">
 				        	<div class="item-inner">
-				         		 <!-- <div class="item-title" id="servceTypeName"></div> -->
 				         		 <div class="item-title" >服务价格</div>
 				        	</div>
 				        </a>
 				        <div class="accordion-item-content">
 				        	<div class="content-block">
-				         	  <p id="serviceContents"></p>
+				         	  <p id="serviceContents">{{data.service_content}}</p>
 				        	</div>
 				        </div>
 				    </li>
@@ -29,7 +28,7 @@
 				        </a>
 				        <div class="accordion-item-content">
 				        	<div class="content-block">
-				         	  <p id="servicePrice"></p>
+				         	  <p id="servicePrice">{{data.remarks}}</p>
 				        	</div>
 				        </div>
 				    </li>
