git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@552 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -3,7 +3,7 @@
 		<div class="page-content"  style="background:#FDEEEE;height:100%!important;" >
 			<form class="list-block">
 				
-				<input type="hidden" name="serviceType" id="serviceType" value="">
+				<input type="hidden" id="serviceType" value="">
 				
 				<input type="hidden" id="parentServiceTypeId" value = "">
 				<ul style="background:#fffce8;">
