git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@553 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -13,7 +13,7 @@
 				         		 <div class="item-title" >服务价格</div>
 				        	</div>
 				        </a>
-				        <div class="accordion-item-content" style="height:100%!important;">
+				        <div class="accordion-item-content" >
 				        	<div class="content-block">
 				         	  <p id="serviceContents">{{data.service_content}}</p>
 				        	</div>
@@ -26,7 +26,7 @@
 				         		 <div class="item-title" >服务介绍</div>
 				        	</div>
 				        </a>
-				        <div class="accordion-item-content" style="height:100%!important;">
+				        <div class="accordion-item-content" >
 				        	<div class="content-block">
 				         	  <p id="servicePrice">{{data.remarks}}</p>
 				        	</div>
